Ensure long urls in modals wrap to stay within the modal.

--- a/src/app/components/modal/modal.style.scss
+++ b/src/app/components/modal/modal.style.scss
@@ -15,6 +15,8 @@
 
   a {
     color: darken($brand-teal, 10);
+    overflow-wrap: break-word;
+    word-wrap: break-word;
   }
 
   button {
